Correction alignement section lodging-popular

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -199,7 +199,7 @@ form :nth-child(4)
 .filters-general > h3
 {
     font-size: large;
-    margin-right: 1%;
+    margin-right: 2%;
     min-width: 55px;
 
 }
@@ -214,6 +214,7 @@ form :nth-child(4)
     height: 100%;
     margin: 0% 1%;
     border-radius: 25px;
+    padding-right: 1%;
     z-index: 0;
 }
 .filters-general div:hover
@@ -233,7 +234,7 @@ form :nth-child(4)
 .filters p
 {
     justify-content: center;
-    padding: 0 10px 0 5px;
+    padding: 0 1% 0 5px;
 }
 .animaux
 {
@@ -260,7 +261,8 @@ form :nth-child(4)
 {
     display: flex;
     align-items: center;
-    width: 100%
+    width: 100%;
+    margin: 1% 0;
 }
 .info-city > img
 {
@@ -272,7 +274,7 @@ form :nth-child(4)
 .container-lodging-popular
 {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     margin: 1% 0%;
